# toric

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  MIGRATION-LOG.md  README.md  conductor-config.yaml  dev.sh  docker-compose.yml  merge-repo.js  package-lock.json  package.json  relay-cert.pem  repomix-output.xml  run-toric.sh  start-agents.sh  start-production.sh
.github/workflows/: test.yaml
api/: index.js  package-lock.json  package.json  toric-ingest.js  toric-search.js
connectors/: bt-connector.js  hf-connector.js
data/databases/: db.key
data/databases/authored/: uhC0kCsS34gsf0WhCjNZx9K_eP2omoueGA_kA4LzSbePYtocJEBns-uhCAkq-6WCSbLFvZwyeVqawrYvEX5mIFQIhVp2d6RTCcfu25Ij4Tm  uhC0kCsS34gsf0WhCjNZx9K_eP2omoueGA_kA4LzSbePYtocJEBns-uhCAkq-6WCSbLFvZwyeVqawrYvEX5mIFQIhVp2d6RTCcfu25Ij4Tm-shm  uhC0kCsS34gsf0WhCjNZx9K_eP2omoueGA_kA4LzSbePYtocJEBns-uhCAkq-6WCSbLFvZwyeVqawrYvEX5mIFQIhVp2d6RTCcfu25Ij4Tm-wal  uhC0kOV3b67K0sRv3ImkA8II8KkyhJHzwMJ6Re2Y88UOR8YP9T4Oo-uhCAkq-6WCSbLFvZwyeVqawrYvEX5mIFQIhVp2d6RTCcfu25Ij4Tm  uhC0kOV3b67K0sRv3ImkA8II8KkyhJHzwMJ6Re2Y88UOR8YP9T4Oo-uhCAkq-6WCSbLFvZwyeVqawrYvEX5mIFQIhVp2d6RTCcfu25Ij4Tm-shm  (+7 more)
data/databases/conductor/: conductor
data/ks/: lair-keystore-config.yaml  store_file  store_file-shm  store_file-wal
dnas/mutual_credit/zomes/coordinator/mutual_credit/: Cargo.toml
dnas/mutual_credit/zomes/coordinator/mutual_credit/src/: lib.rs
frontend/: index.html
patches/: hc-spin.cjs
scripts/: attach-interface.js  install-happ.js  launch.js
sdk/: README.md  index.js  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: package.json
ui/: index.html
ui/src/: toric-client.js
validator/: index.js  package-lock.json  package.json
workdir/: happ.yaml  web-happ.yaml
(+32 files in other folders)
