[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
    "dnas/shared/geometry",
    "dnas/*/zomes/coordinator/*",
    "dnas/*/zomes/integrity/*",
    "dnas/identity/zomes/integrity/identity",
    "dnas/identity/zomes/coordinator/identity",
]
resolver = "2"

[workspace.dependencies]
hdi = "=0.7.1"
hdk = "=0.6.1"
holochain_serialized_bytes = "*"
serde = "1.0"
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[workspace.dependencies.toric-geometry]
path = "dnas/shared/geometry"

[workspace.dependencies.registry]
path = "dnas/registry/zomes/coordinator/registry"

[workspace.dependencies.registry_integrity]
path = "dnas/registry/zomes/integrity/registry"
