[package]
name = "toric"
version = "0.1.0"
description = "Toric Network Node"
authors = ["Toric"]
edition = "2021"

[lib]
name = "toric_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "toric"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
