[package]
name = "mutual_credit"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mutual_credit"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
mutual_credit_integrity = { path = "../../integrity/mutual_credit" }
toric-geometry = { workspace = true }